@@ -1,6 +1,12 @@
 package com.example.demo.service.impl;
 
+import com.example.demo.entity.Department;
+import com.example.demo.entity.Employee;
+import com.example.demo.entity.Lesson;
+import com.example.demo.exception.common.NotFoundException;
+import com.example.demo.repo.DepartmentRepo;
 import com.example.demo.repo.LessonRepo;
+import com.example.demo.rest.dto.lesson.LessonDepartment;
 import com.example.demo.rest.dto.lesson.LessonInfo;
 import com.example.demo.service.LessonService;
 import com.example.demo.utils.converters.lesson.LessonConverterFactory;
@@ -8,10 +14,13 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import org.springframework.util.CollectionUtils;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Slf4j
 @RequiredArgsConstructor
@@ -19,14 +28,61 @@ import java.util.stream.Collectors;
 public class LessonServiceImpl implements LessonService {
 
     private final LessonRepo lessonRepo;
+    private final DepartmentRepo departmentRepo;
 
     private final LessonConverterFactory lessonConverterFactory;
 
     @Override
-    public ResponseEntity<List<LessonInfo>> getSchedule() {
-        List<LessonInfo> schedule = lessonRepo.findAllByDateStartAfterOrderByDateStartAsc(LocalDateTime.now()).stream()
+    public ResponseEntity<List<LessonDepartment>> getSchedule() {
+        List<Department> departments = departmentRepo.findAll();
+        List<LessonDepartment> result = new ArrayList<>();
+
+        for (Department department: departments) {
+            List<LessonInfo> lessonsForDepartment = getLessonsForDepartment(department);
+
+            result.add(new LessonDepartment(department.getName(), lessonsForDepartment));
+        }
+
+        return ResponseEntity.ok(result);
+    }
+
+    @Override
+    public ResponseEntity<LessonDepartment> getSchedule(Long departmentId) {
+        Optional<Department> departmentFromDb = departmentRepo.findById(departmentId);
+
+        if (departmentFromDb.isEmpty()) {
+            throw new NotFoundException("Не удалось найти подразделение по id = " + departmentId);
+        }
+
+        Department department = departmentFromDb.get();
+        List<LessonInfo> lessonsForDepartment = getLessonsForDepartment(department);
+
+        return ResponseEntity.ok(new LessonDepartment(department.getName(), lessonsForDepartment));
+    }
+
+    private List<LessonInfo> getLessonsForDepartment(Department department) {
+        LinkedList<Lesson> futureEmployeeDepartmentLessons = new LinkedList<>();
+
+        for (Employee employee: department.getEmployees()) {
+            List<Lesson> employeeLessons = employee.getLessons();
+            List<Lesson> employeeFutureLessons = new ArrayList<>();
+            if (CollectionUtils.isEmpty(employeeLessons)) {
+                continue;
+            }
+
+            LocalDateTime now = LocalDateTime.now();
+
+            for (Lesson lesson: employeeLessons) {
+                if (lesson.getDateStart().isAfter(now)) {
+                    employeeFutureLessons.add(lesson);
+                }
+            }
+
+            futureEmployeeDepartmentLessons.addAll(employeeFutureLessons);
+        }
+
+        return futureEmployeeDepartmentLessons.stream()
                 .map(lesson -> lessonConverterFactory.getLessonInfoConverter().convert(lesson))
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(schedule);
+                .toList();
     }
 }
